# ream

./: .gitignore  LICENSE  README.md  list_chats.py  pyproject.toml  ream.py  serialization.py
serialization/: __init__.py  _action.py  _buttons.py  _entities.py  _helpers.py  _media.py  _phone.py  _text.py  currencies.json  serialization.py
