[tool.poetry]
name = "ream"
version = "0.1.0"
description = "Automatic export for your Telegram chats"
authors = ["flexagoon <code@fxgn.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Telethon = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


["mypy-telethon.*"]
disabl_error_code = ["import-untyped"]
