[project]
name = "ream"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "telethon>=1.40.0",
    "cryptg>=0.5.0.post0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1", # Type checking
    "ruff>=0.12.0", # Linting and formatting
]

[tool.ruff.lint]
select = ["ALL"] # Enable all linter rules
preview = true   # Enable rules that are in beta
ignore = [
    # [suspicious-non-cryptographic-random-usage]
    # `random` is not used for cryptographic purposes most of the time,
    # so using it instead of the `secrets` module is usually fine.
    "S311",

    # [flake8-copyright]
    # I don't use copyright headers in my code, so this ruleset is unneeded.
    "CPY", 

    # [line-too-long]
    # When making the line shorter is possible, ruff's formatter
    # automatically takes care of that, so warning about long lines is
    # unnecessary.
    "E501", 

    # [missing-todo-author], [missing-todo-link]
    # I don't use TODO tags for repository issue tracking, so I don't need
    # author and issue links on them.
    "TD002", 
    "TD003", 

    # [complex-structure], [too-many-branches], [too-many-statements], [too-many-return-statements]
    # This code heavily uses huge match blocks and if statements, so trying to
    # reduce function complexity will actually make the code less readable.
    "C901", 
    "PLR0911",
    "PLR0912",
    "PLR0915",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
strict = true # Enforce type annotations
disable_error_code = "name-defined" # Ruff already reports undefined variables

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true
